overflow issue fix

--- a/style.css
+++ b/style.css
@@ -210,4 +210,7 @@ students section css
     p {
         font-size:14px;
     }
+    body {
+        overflow-x:hidden;
+    }
   }
